# MusicTrash

./: README.md  console.py  history.py  manager.py  ml.py  pyproject.toml  server.py  user_selection.json
app/: db.py
app/api/route/: __init__.py  get_instrument.py
app/api/schemas/: instrument_schemas.py
app/utils/: fuzzy.py  music backup.rdf  music.owl  music.rdf  ontology.py
