[tool.poetry]
name = "searchformapi"
version = "0.1.0"
description = "Web app for form recognition"
authors = ["Krayson <sdflake758@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
motor = "^3.6.0"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
owlready2 = "^0.47"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
