[project]
name = "musictrash"
version = "0.1.0"
description = ""
authors = [
    {name = "Krayson",email = "sdflake758@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "owlready2 (>=0.47,<0.48)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "scikit-fuzzy (>=0.5.0,<0.6.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "networkx (>=3.4.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
